--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -80,22 +80,8 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 %--------------------------------------------------
 
 \section*{Acknowledgements}
-% TODO: add final version
-\iffalse
-We are grateful to the beam optics development team for the design and the 
-successful commissioning of the high $\beta^{*}$ optics and to the LHC machine 
-coordinators for scheduling the dedicated fills.
 
-We thank B. Alberski, P. Anielski, M. Idzik, I. Jurkowski, R. Lazarz, 
-B. Niemczura for their help in software development.
-
-This work was supported by the institutions listed on the front page and 
-partially also by NSF (US), the Magnus Ehrnrooth Foundation (Finland), the 
-Waldemar von Frenckell Foundation (Finland), the Academy of Finland, the 
-Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle 
-V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the 
-NKTH-OTKA grant 74458 (Hungary).
-\fi
+\input acknowledgements
 
 %----------------------------------------------------------------------------------------------------
 \begin{thebibliography}{99}
