--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,11 +1,19 @@
-\section{Summary}
+\section{Summary and Outlook}
+
+\> conclude the (quite a few) Coulomb-study results
+\>> generally summarise the feasibility of the task
+\>> summarise the numbers, uncertainties
 
 \> emphasize very first results, original work
+\>> first LHC result of si tot where
+\>>> rho determined in the same analysis (not from an external source)
+\>>> explicit separation of Coulomb and nuclear components
+
 \> emphasize novel methods, used for the first times
+\>> RPs extremely close to beam, novel collimation procedure
 
-
-%--------------------------------------------------
-
-\section{Outlook}
-
-\> if any...
+\> prospects for future
+\>> how could things be done better: requirements from theory/experiment
+\>>> need better distinction between the hadronic and CNI components
+\>>> either from theory: narrow the range of possible parametrisations
+\>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
