--- a/2013/1km paper/differential_cross_section.tex
+++ b/2013/1km paper/differential_cross_section.tex
@@ -346,7 +346,7 @@ Besides the systematic uncertainties mentioned at the above analysis steps, the 
 Two different methods are used to propagate the systematic effects into the $t$-distribution. One is based on a Monte-Carlo simulation which uses a fit of the final differential cross-section data to generate the true $t$-distribution. Simultaneously, another $t$-distribution is built, having introduced one of the above mentioned systematic effects at $1\un{\sigma}$ level. The difference between the $t$-distributions gives the systematic effect on the differential cross-section. The second method is similar, however using numerical integration techniques instead of Monte-Carlo simulations. Both methods are formally equivalent to evaluating
 \begin{equation}
 \label{eq:syst mode}
-\delta s_{q}(t) \equiv \frac{\partial(\d\sigma/\d t)}{\partial q} \delta q\ ,
+\delta s_{q}(t) \equiv \frac{\partial(\d\sigma/\d t)}{\partial q}\ \delta q\ ,
 \end{equation}
 where $\delta q$ corresponds to $1\un{\sigma}$ bias in the quantity $q$ responsible for a given systematic effect.
 
