--- a/2013/1km paper/acknowledgements.tex
+++ b/2013/1km paper/acknowledgements.tex
@@ -1,13 +1,5 @@
-We are grateful to the beam optics development team for the design and the 
-successful commissioning of the high $\beta^{*}$ optics and to the LHC machine 
-coordinators for scheduling the dedicated fills.
-
-We thank B. Alberski, P. Anielski, M. Idzik, I. Jurkowski, R. Lazarz, 
-B. Niemczura for their help in software development.
-
-This work was supported by the institutions listed on the front page and 
-partially also by NSF (US), the Magnus Ehrnrooth Foundation (Finland), the 
-Waldemar von Frenckell Foundation (Finland), the Academy of Finland, the 
-Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle 
-V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the 
-NKTH-OTKA grant 74458 (Hungary).
+This work was supported by the institutions listed on the front page and also by the 
+Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), 
+the Academy of Finland, the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund), 
+the OTKA grant NK 101438 (Hungary). Individuals have received support from Nylands nation vid Helsingfors universitet (Finland) 
+and from the M\v SMT \v CR (Czech Republic).
