--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -13,7 +13,7 @@ typically a strongly simplified interference formula was used. This so-called
 Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
 constant phase for all $t$ (see the discussion in 
-Section~\ref{sec:cni_framework}).
+Section~\ref{sec:cni interference}).
 As result, traditionally the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
 equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was quoted. 
 Most of the interest in $\rho$ lies in its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
@@ -35,7 +35,7 @@ choice of the theoretically unknown functional forms of the hadronic modulus
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
 expressed in terms of $\rho$, become conditional to the choice of the model 
 describing the hadronic amplitude. This choice has implications on the behaviour of the interaction in impact parameter space. In particular, the functional 
-form of the hadronic phase at $|t|>0$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs. peripherality). A relevant question to be addressed in the discussion of the fit results is therefore whether the data have enough discrimination power to show any preference for either a central or a peripheral elastic scattering behaviour (Section~... \textbf{[not yet written!!!]}).
+form of the hadronic phase at $|t|>0$ determines whether elastic collisions occur predominantly at small or large impact parameters (centrality vs. peripherality). A relevant question to be addressed in the discussion of the fit results is therefore whether the data have enough discrimination power to show any preference for either a central or a peripheral elastic scattering behaviour (Section~\ref{sec:cni task discussion} \TODO{correct?}).
 
 The paper is organised as follows.
 \begin{itemize}
